Closed Bug 715481 Opened 12 years ago Closed 12 years ago

IonMonkey: Respect ION_DISABLED_SCRIPT in CanEnterAtBranch().

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: sstangl, Unassigned)

Details

Attachments

(1 file, 1 obsolete file)

Attached patch Patch. (obsolete) — Splinter Review
Before patch:

[sstangl@winhill dbg64]$ IONFLAGS=aborts ./js --ion -n ~/js/bitops-bitwise-and.js &> ~/foo; grep -c "Abort" ~/foo
600001

After patch:

[sstangl@winhill dbg64]$ IONFLAGS=aborts ./js --ion -n ~/js/bitops-bitwise-and.js &> ~/foo; grep -c "Abort" ~/foo
1
Attachment #586052 - Flags: review?(dvander)
Attachment #586052 - Flags: review?(dvander) → review+
Attached patch Patch v2.Splinter Review
Fix assertion tripping: CheckFrame() was being called even for scripts were disabled.
Attachment #586052 - Attachment is obsolete: true
Attachment #586176 - Flags: review?(dvander)
Attachment #586176 - Flags: review?(dvander) → review+
http://hg.mozilla.org/projects/ionmonkey/rev/acfa9cd41bcb
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.