Respect ION_DISABLED_SCRIPT in CanEnterAtBranch(). (Bug 715481, r=dvander)