js/src/ion/Ion.cpp
@@ -774,16 +774,17 @@ ion::CanEnterAtBranch(JSContext *cx, JSScript *script, StackFrame *fp, jsbytecod
     JS_ASSERT(ion::IsEnabled());
     JS_ASSERT((JSOp)*pc == JSOP_LOOPHEAD);
 
-    // Optionally ignore on user request.
-    if (!js_IonOptions.osr)
+    // Skip if the script has been disabled.
+    if (script->ion == ION_DISABLED_SCRIPT)
         return Method_Skipped;
 
     // Ignore OSR if the code is expected to result in a bailout.
-    if (script->ion && script->ion != ION_DISABLED_SCRIPT &&
-        script->ion->isOsrForbidden())
-    {
+    if (script->ion && script->ion->isOsrForbidden())
         return Method_Skipped;
-    }
+
+    // Optionally ignore on user request.
+    if (!js_IonOptions.osr)
+        return Method_Skipped;
 
     // Attempt compilation. Returns Method_Compiled if already compiled.
     MethodStatus status = Compile(cx, script, fp, pc);
@@ -802,18 +803,24 @@ ion::Compile(JSContext *cx, JSScript *script, js::StackFrame *fp, jsbytecode *os
     JS_ASSERT(ion::IsEnabled());
     JS_ASSERT_IF(osrPc != NULL, (JSOp)*osrPc == JSOP_LOOPHEAD);
 
+
+    if (script->ion == ION_DISABLED_SCRIPT)
+        return Method_CantCompile;
+
     if (cx->compartment->debugMode()) {
         IonSpew(IonSpew_Abort, "debugging");
         return Method_CantCompile;
     }
 
-    if (!CheckFrame(fp))
+    if (!CheckFrame(fp)) {
+        JS_ASSERT(script->ion != ION_DISABLED_SCRIPT);
+        script->ion = ION_DISABLED_SCRIPT;
         return Method_CantCompile;
+    }
 
     if (script->ion) {
-        if (script->ion == ION_DISABLED_SCRIPT || !script->ion->method())
+        if (!script->ion->method())
             return Method_CantCompile;
-
         return Method_Compiled;
     }
 
@@ -821,6 +828,7 @@ ion::Compile(JSContext *cx, JSScript *script, js::StackFrame *fp, jsbytecode *os
         return Method_Skipped;
 
     if (!IonCompile(cx, script, fp, osrPc)) {
+        JS_ASSERT(script->ion != ION_DISABLED_SCRIPT);
         script->ion = ION_DISABLED_SCRIPT;
         return Method_CantCompile;
     }
